# python-project-49

./: .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  vercel.json
brain_games/: accounts.py  app.py  benchmarks.py  cli.py  difficulty.py  engine.py  leaderboard.py  persistence.py  ui.py  web_engine.py
brain_games/games/: brain_calc.py  brain_culmination.py  brain_direction_focus.py  brain_even.py  brain_gcd.py  brain_number_memory.py  brain_prime.py  brain_progression.py  brain_symbol_match.py  brain_verbal_memory.py  brain_word_scramble.py  catalog.py
brain_games/scripts/: brain_culmination.py  brain_direction_focus.py  brain_games.py  brain_number_memory.py  brain_symbol_match.py  brain_verbal_memory.py  brain_word_scramble.py
brain_games/static/: app.js  audio.js  main.css
brain_games/templates/: index.html  layout.html  login.html  player.html  register.html  stats.html
public/static/: app.js  effects.js  main.css  theme.js
tests/: test_accounts.py  test_auth_stats.py  test_benchmarks.py  test_cli.py  test_culmination.py  test_engine.py  test_frontend_progression.py  test_games.py  test_leaderboard.py  test_new_games.py  test_persistence.py  test_ui.py  test_vercel_packaging.py  test_web_app.py  test_web_engine.py
