[tool.poetry]
name = "hexlet-code"
version = "0.6.0"
description = "BrainHacker browser tests and terminal games with fixed score benchmarks"
authors = ["Nikolai Gordienko <nicolas.gordienko@gmail.com>"]
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/NcollegeB/python-project-49"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = ">=3.9,<4.0"
prompt = "^0.4.1"
flask = "^2.3.2"
flask-wtf = "^1.1.1"
wtforms = "^3.0.1"
flask-cors = "^4.0.0"
gunicorn = "^21.2.0"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.0"
flask-admin = "^1.6.1"
psycopg2-binary = "^2.9.12"
sqlalchemy = "^2.0.51"

[tool.poetry.group.dev.dependencies]
flake8 = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-number-memory = "brain_games.scripts.brain_number_memory:main"
brain-verbal-memory = "brain_games.scripts.brain_verbal_memory:main"
brain-direction-focus = "brain_games.scripts.brain_direction_focus:main"
brain-symbol-match = "brain_games.scripts.brain_symbol_match:main"
brain-word-scramble = "brain_games.scripts.brain_word_scramble:main"
brain-culmination = "brain_games.scripts.brain_culmination:main"
